kubernetes/monitoring/sdtrack.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sdtrack
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: sdtrack
  template:
    metadata:
      labels:
        app: sdtrack
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9001"
        prometheus.io/path: "/metrics"
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: sdtrack
        image: python:3-alpine
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "64Mi"
        command: ["/bin/sh"]
        args:
        - -c
        - |
          [...]
        volumeMounts:
        - name: sdtrack-volume
          mountPath: /mnt/ssd
          readOnly: true
        ports:
        - containerPort: 9001
          name: metrics
      volumes:
      - name: sdtrack-volume
        persistentVolumeClaim:
          claimName: sdtrack
          readOnly: true
