kubernetes/monitoring/grafana.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`health-test.example.com`) || Host(`grafana.example.com`)
      services:
        - name: grafana
          port: 80
  tls:
    secretName: default@cert
